2007-11-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:
	* generic/tclInt.h:
	* unix/tclUnixInit.c:
	* unix/tclUnixPort.h:
	* win/tclWin32Dll.c: modify the stack checking algorithm to
	recheck in case of failure. The working assumptions are now that
	(a) a thread's stack is never moved, and (b) a thread's stack can
	grow but not shrink. Port to windows - could be more efficient,
	but is already cheaper than it was.
	
2007-11-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclResult.c (ResetObjResult): new shortcut.
	
	* generic/tclAsync.c:
	* generic/tclBasic.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclUnixInit.c:
	* generic/tclUnixPort.h: new fields in interp (ekeko!) to cache
	TSD data that is accessed at each command invocation, access
	macros to replace Tcl_AsyncReady and TclpCheckStackSpace by much
	faster variants [Patch 1829248]

2007-11-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclInt.decls, generic/tclIntDecls.h: Use unsigned char for
	* generic/tclExecute.c, generic/tclUtil.c:     TclByteArrayMatch
	and don't allow a nocase option. [Bug 1828296]
	For INST_STR_MATCH, ignore pattern type for TclByteArrayMatch case.

	* generic/tclBinary.c (Tcl_GetByteArrayFromObj): check type before
	func jump (perf)

2007-11-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclStubInit.c:			added TclByteArrayMatch
	* generic/tclInt.decls				for efficient glob
	* generic/tclIntDecls.h:			matching of ByteArray
	* generic/tclUtil.c (TclByteArrayMatch):	Tcl_Objs, used in
	* generic/tclExecute.c (TclExecuteByteCode):	INST_STR_MATCH.
							[Bug 1827996]
	
	* generic/tclIO.c (TclGetsObjBinary):		add an efficient binary
							path for [gets].
	(DoWriteChars):					special case for 1-byte
							channel write.

2007-11-06  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclEncoding.c: Version of the embedded iso8859-1 encoding
	handler that is faster (functions to do the encoding know exactly what